# DeepVacuumCleaner

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  conanfile.txt  main.cpp
sources/: agent_demo.cpp  application.cpp  application.hpp  config.hpp  environment.cpp  environment.hpp  evolution.cpp  evolution_training.cpp  evolution_training.hpp  imgui.hpp  main.cpp  map_editor.cpp  map_editor.hpp  math.hpp  matrix.hpp  neural_network_agent.cpp  neural_network_agent.hpp  nn.cpp  nn.hpp  plot.cpp  render.cpp  render.hpp  serialization.hpp  stupid_agent.hpp  vacuum_cleaner.cpp  vacuum_cleaner.hpp  vacuum_cleaner_operator.cpp  vacuum_cleaner_operator.hpp
sources/agents/: agent.cpp  agent.hpp  manual.cpp  manual.hpp  nn_agent.cpp  nn_agent.hpp  stupid_agent.cpp  stupid_agent.hpp
sources/env/: coverage.cpp  coverage.hpp  environment.cpp  environment.hpp  graph.cpp  graph.hpp  grid.cpp  grid.hpp  path.cpp  path.hpp  wall.cpp  wall.hpp
sources/model/: evolution_training.cpp  neural_network_agent.cpp  neural_network_agent.hpp  stupid_agent.cpp  stupid_agent.hpp  vacuum_cleaner.cpp  vacuum_cleaner.hpp  vacuum_cleaner_operator.cpp
sources/utils/: assert.hpp  math.hpp  matrix.hpp  nn.cpp  nn.hpp  random.hpp  render.hpp
